--- a/src/web/MTG.Scores2.Web/src/app/account/login/login.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/account/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-8 text-center">
       <h1 class="mt-5">{{title}}</h1>
       <p>
-          <button class="btn btn-lg btn-primary" (click)="login()">Login with IdentityServer</button>
+          <button type="button" mat-raised-button color="accent" (click)="login()">Login with IdentityServer</button>
       </p>     
     </div>
 </div>
