--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
@@ -25,7 +25,7 @@
         <button mat-icon-button [routerLink]="['/tournament-details', tournament.id]">
           <mat-icon aria-label="Edit">edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="delete(tournament.id)">
+        <button *ngIf="isAuthenticated" mat-icon-button color="warn" (click)="delete(tournament.id)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
       </mat-cell>
