--- a/src/web/MTG.Scores2.Web/src/app/account/register/register.component.scss
+++ b/src/web/MTG.Scores2.Web/src/app/account/register/register.component.scss
@@ -1,17 +1,31 @@
  .register-form {
   display: flex;
   justify-content: center;
-  margin: 100px 0px;
+  margin: 50px 0 0 0;
 }
 
 .mat-form-field {
-  width: 100%;
+  margin: 5px 0;
   min-width: 300px;
-  margin: 2px 0;
 }
 
-// mat-card-title,
-// mat-card-content {
-//   display: flex;
-//   justify-content: center;
+mat-card-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+mat-card-header {
+  display: flex;
+  justify-content: center;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 0px;
+}
+
+// mat-card-actions .submit-btn {
+//   justify-self: flex-end
 // }
