--- a/src/web/MTG.Scores2.Web/src/app/account/login/login.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/account/login/login.component.html
@@ -1,8 +1,10 @@
-<div class="row justify-content-center">
-  <div class="col-md-8 text-center">
-      <h1 class="mt-5">{{title}}</h1>
-      <p>
-          <button type="button" mat-raised-button color="accent" (click)="login()">Login with IdentityServer</button>
-      </p>     
-    </div>
+<div class="login-form">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Logowanie</mat-card-title>
+    </mat-card-header>
+      <mat-card-content>
+        <button type="button" mat-raised-button color="accent" (click)="login()">Login with IdentityServer</button>
+      </mat-card-content>
+  </mat-card>
 </div>
