Torunamets service returns observables. Spinner while loading tournaments
spinner

delete tournaments

adding tournament

--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.scss
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.scss
@@ -8,3 +8,10 @@
   padding: 10px;
   position: relative;
 }
+
+.spinner {
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  margin-top: 30px;
+}
