--- a/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/tournaments/tournaments.component.html
@@ -34,4 +34,9 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  <div class="spinner" *ngIf="tournamentsDataSource.loading$ | async">
+    <mat-progress-spinner color="primary" mode="indeterminate">
+    </mat-progress-spinner>
+  </div> 
 </div>
