Cancel btn on new-tournament page

--- a/src/web/MTG.Scores2.Web/src/app/new-tournament/new-tournament.component.html
+++ b/src/web/MTG.Scores2.Web/src/app/new-tournament/new-tournament.component.html
@@ -30,6 +30,7 @@
     </div>
     <div class="submit-group">
       <button [disabled]="!tournamentForm.valid" mat-raised-button color="primary" type="submit">Zapisz turniej</button>
+      <button type="button" mat-raised-button [routerLink]="['/tournaments']">Anuluj</button>
     </div>
   </form>
 </div>
