--- a/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.less
+++ b/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.less
@@ -109,3 +109,13 @@
     color: white;
   }
 }
+
+.login-page {
+  .mdl-card {
+    width: 100%;
+  }
+
+  .external-providers-card{
+    min-height: 100px;
+  }
+}
