--- a/src/identityserver/MTG.Scores2.IdentityServer/Views/Account/Login.cshtml
+++ b/src/identityserver/MTG.Scores2.IdentityServer/Views/Account/Login.cshtml
@@ -1,93 +1,92 @@
 ﻿@model LoginViewModel
 
 <div class="login-page">
-    <div class="page-header">
-        <h1>Login</h1>
-    </div>
+  <div class="page-header">
+    <h1>Login</h1>
+  </div>
 
-    <partial name="_ValidationSummary" />
+  <partial name="_ValidationSummary" />
 
-    <div class="row">
+  <div class="row">
 
-        @if (Model.EnableLocalLogin)
-        {
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Local Login</h3>
-                    </div>
-                    <div class="panel-body">
+    @if (Model.EnableLocalLogin)
+    {
+      <div class="col-sm-6">
+        <div class="mdl-card mdl-shadow--2dp local-login-card">
+          <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">Local login</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            <form asp-route="Login">
+              <input type="hidden" asp-for="ReturnUrl" />
 
-                        <form asp-route="Login">
-                            <input type="hidden" asp-for="ReturnUrl" />
-
-                            <fieldset>
-                                <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Password"></label>
-                                    <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
-                                </div>
-                                @if (Model.AllowRememberLogin)
-                                {
-                                    <div class="form-group login-remember">
-                                        <label asp-for="RememberLogin">
-                                            <input asp-for="RememberLogin">
-                                            <strong>Remember My Login</strong>
-                                        </label>
-                                    </div>
-                                }
-
-                                <div>
-                                    <p>The default users are alice/bob, password: Pass123$</p>
-                                </div>
-
-                                <div class="form-group">
-                                    <button class="btn btn-primary" name="button" value="login">Login</button>
-                                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
+              <fieldset>
+                <div class="form-group">
+                  <label asp-for="Username"></label>
+                  <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
                 </div>
-            </div>
-        }
-
-        @if (Model.VisibleExternalProviders.Any())
-        {
-            <div class="col-md-6 col-sm-6 external-providers">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">External Login</h3>
-                    </div>
-                    <div class="panel-body">
-                        <ul class="list-inline">
-                            @foreach (var provider in Model.VisibleExternalProviders)
-                            {
-                                <li>
-                                    <a class="btn btn-default"
-                                       asp-controller="External"
-                                       asp-action="Challenge"
-                                       asp-route-provider="@provider.AuthenticationScheme"
-                                       asp-route-returnUrl="@Model.ReturnUrl">
-                                        @provider.DisplayName
-                                    </a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
+                <div class="form-group">
+                  <label asp-for="Password"></label>
+                  <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
                 </div>
-            </div>
-        }
+                @if (Model.AllowRememberLogin)
+                {
+                  <div class="form-group login-remember">
+                    <label asp-for="RememberLogin">
+                      <input asp-for="RememberLogin">
+                      <strong>Remember My Login</strong>
+                    </label>
+                  </div>
+                }
 
-        @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
-        {
-            <div class="alert alert-warning">
-                <strong>Invalid login request</strong>
-                There are no login schemes configured for this client.
-            </div>
-        }
-    </div>
+                <div>
+                  <p>The default users are alice/bob, password: Pass123$</p>
+                </div>
+
+                <div class="form-group">
+                  <button class="btn btn-primary" name="button" value="login">Login</button>
+                  <button class="btn btn-default" name="button" value="cancel">Cancel</button>
+                </div>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </div>
+    }
+
+    @if (Model.VisibleExternalProviders.Any())
+    {
+      <div class="col-md-6 col-sm-6">
+        <div class="mdl-card mdl-shadow--2dp external-providers-card">
+          <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">External Login</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            <ul class="list-inline">
+              @foreach (var provider in Model.VisibleExternalProviders)
+              {
+                <li>
+                  <a class="btn btn-default"
+                     asp-controller="External"
+                     asp-action="Challenge"
+                     asp-route-provider="@provider.AuthenticationScheme"
+                     asp-route-returnUrl="@Model.ReturnUrl">
+                    @provider.DisplayName
+                  </a>
+                </li>
+              }
+            </ul>
+          </div>
+        </div>
+      </div>
+    }
+
+    @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
+    {
+      <div class="alert alert-warning">
+        <strong>Invalid login request</strong>
+        There are no login schemes configured for this client.
+      </div>
+    }
+  </div>
 </div>
