using material style inputs and btns on loign page

--- a/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.css
+++ b/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.css
@@ -1,4 +1,10 @@
-﻿.icon {
+﻿label {
+  margin: 0;
+}
+a:hover {
+  text-decoration: none;
+}
+.icon {
   position: relative;
   top: -10px;
 }
@@ -67,9 +73,6 @@
 }
 .grants .grant li:last-child:after {
   content: '';
-}
-.mdl-menu a:hover {
-  text-decoration: none;
 }
 .mdl-layout__header-row .mdl-button {
   color: white;
