--- a/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.less
+++ b/src/identityserver/MTG.Scores2.IdentityServer/wwwroot/css/site.less
@@ -1,4 +1,12 @@
-﻿.icon {
+﻿label{
+  margin: 0;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.icon {
   position: relative;
   top: -10px;
 }
@@ -99,11 +107,7 @@
     }
   }
 }
-.mdl-menu {
-  a:hover {
-    text-decoration: none;
-  }
-}
+
 .mdl-layout__header-row {
   .mdl-button {
     color: white;
