--- a/src/identityserver/MTG.Scores2.IdentityServer/Views/Account/Login.cshtml
+++ b/src/identityserver/MTG.Scores2.IdentityServer/Views/Account/Login.cshtml
@@ -20,34 +20,31 @@
             <form asp-route="Login">
               <input type="hidden" asp-for="ReturnUrl" />
 
-              <fieldset>
-                <div class="form-group">
-                  <label asp-for="Username"></label>
-                  <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
-                </div>
-                <div class="form-group">
-                  <label asp-for="Password"></label>
-                  <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
-                </div>
-                @if (Model.AllowRememberLogin)
-                {
-                  <div class="form-group login-remember">
-                    <label asp-for="RememberLogin">
-                      <input asp-for="RememberLogin">
-                      <strong>Remember My Login</strong>
-                    </label>
-                  </div>
-                }
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" asp-for="Username" autofocus>
+                <label class="mdl-textfield__label" asp-for="Username">Username</label>
+              </div>
 
-                <div>
-                  <p>The default users are alice/bob, password: Pass123$</p>
-                </div>
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="password" asp-for="Password" autocomplete="off">
+                <label class="mdl-textfield__label" asp-for="Password">Password</label>
+              </div>
 
-                <div class="form-group">
-                  <button class="btn btn-primary" name="button" value="login">Login</button>
-                  <button class="btn btn-default" name="button" value="cancel">Cancel</button>
-                </div>
-              </fieldset>
+              @if (Model.AllowRememberLogin)
+              {
+
+                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" asp-for="RememberLogin">
+                  <input type="checkbox" class="mdl-checkbox__input" asp-for="RememberLogin">
+                  <span class="mdl-checkbox__label">Remember my login</span>
+                </label>
+              }
+
+              <div>
+                <p>The default users are alice/bob, password: Pass123$</p>
+              </div>
+
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" name="button" value="login">Login</button>
+              <button class="mdl-button mdl-js-button mdl-button--raised" name="button" value="cancel">Cancel</button>
             </form>
           </div>
         </div>
@@ -66,7 +63,7 @@
               @foreach (var provider in Model.VisibleExternalProviders)
               {
                 <li>
-                  <a class="btn btn-default"
+                  <a class="mdl-button mdl-js-button mdl-button--raised"
                      asp-controller="External"
                      asp-action="Challenge"
                      asp-route-provider="@provider.AuthenticationScheme"
